force-app/main/default/objects/idbx_Vote__c/idbx_Vote__c.object-meta.xml
<CustomObject>
    <description>Indicates voting points of each idea submitted in Ideabox.</description>
    <label>Vote</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Vote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>