force-app/main/default/objects/idbx_Vote__c/fields/idbx_Idea__c.field-meta.xml
<CustomField>
    <fullName>idbx_Idea__c</fullName>
    <description>Links the vote to the associated idea.</description>
    <inlineHelpText>Links the vote to the associated idea.</inlineHelpText>
    <label>Idea</label>
    <referenceTo>idbx_Idea__c</referenceTo>
    <relationshipLabel>Votes</relationshipLabel>
    <relationshipName>Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>