force-app/main/default/objects/idbx_Vote__c/fields/idbx_Type__c.field-meta.xml
<CustomField>
    <fullName>idbx_Type__c</fullName>
    <description>Specifies whether the vote is an Upvote, Neutral, or Downvote.</description>
    <inlineHelpText>Specifies whether the vote is an Upvote, Neutral, or Downvote.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upvote</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Downvote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>