force-app/main/default/objects/idbx_Vote__c/fields/idbx_User__c.field-meta.xml
<CustomField>
    <fullName>idbx_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the user who cast the vote.</description>
    <inlineHelpText>Tracks the user who cast the vote.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Votes</relationshipName>
    <type>Lookup</type>
</CustomField>