force-app/main/default/objects/idbx_Vote__c/fields/idbx_Vote_Points__c.field-meta.xml
<CustomField>
    <fullName>idbx_Vote_Points__c</fullName>
    <description>Automatically calculates the point value of the vote based on its type.</description>
    <formula>IF(TEXT(idbx_Type__c) = &apos;Neutral&apos;, 0, 
  IF(TEXT(idbx_Type__c) = &apos;Upvote&apos;, 10, -10)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculates the point value of the vote based on its type.</inlineHelpText>
    <label>Vote Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>